fix: incorrectly displayed buttons when account balance value is too long

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
 .navigation {
   display: flex;
   height: 100%;
-  margin: 0 0 0 48px;
+  margin: 0 0 0 12px;
   align-items: center;
 
   &__item {
